objects/ASI_MFM_Approval_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting for PR Gulf Approval</description>
    <fields>
        <fullName>ASI_MFM_Direct_Payment_Max_Allowed_Amt__c</fullName>
        <label>Direct Payment Max Allowed Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Min_Approval_Amt__c</fullName>
        <label>Payment Min. Approval Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Tolerance_Amt__c</fullName>
        <label>Payment Tolerance Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_Tolerance_Percent__c</fullName>
        <label>Payment Tolerance Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>ASI MFM Approval Setting</label>
</CustomObject>